social projects supported

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
           <a class="nav-link js-scroll-trigger" href="#certification">Certifications</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#social">Social Projects (Support)</a>
+        </li>        
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#keys">Public Keys</a>
         </li>        
       </ul>
@@ -391,6 +394,18 @@
           </div>
         </div>
 
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">USP/Esalq</h3>
+            <div class="subheading mb-3">MBA Data Science and Analytics</div>
+            <div>Analytics, Big Data, IA, Machine Learning, Business</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Oct 2022 - Jul 2024</span>
+          </div>
+        </div>
+
+
       </div>
     </section>
 
@@ -422,6 +437,59 @@
           </div>
         </div>        
         
+      </div>
+    </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="social">
+      <div class="my-auto">
+        <h2 class="mb-5">Social Projects - Support</h2>
+        <div class="subheading mb-3">Supported Brazilian Entities and Projects</div> 
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">
+              <a href="https://www.maesdafavela.com.br/doar" target="_blank">Mães da Favela</a>
+            </h3>
+            <div class="subheading mb-3">Fundo solidário COVID-19 para Mães das Favelas</div>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">
+              <a href="https://www.cozinhasolidaria.com" target="_blank">Cozinha Solidária</a>
+            </h3>
+            <div class="subheading mb-3">Cozinhas que distribuiem refeições para combate a fome em periferias</div>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">
+              <a href="https://m.facebook.com/100068907803733/" target="_blank">Projeto Resgato Salto</a>
+            </h3>
+            <div class="subheading mb-3">Projeto de resgate de animais feridos e abandonados na cidade de Salto - SP</div>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">
+              <a href="https://www.catarse.me/solidaridade_vegan_maritas_sem_crueldade_animal_9084" target="_blank">Solidariedade Vegan</a>
+            </h3>
+            <div class="subheading mb-3">Marmitas sem crueldade @solidariedadevegan</div>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">
+              <a href="https://masp.org.br/apoie/amigo-masp" target="_blank">Amigo MASP</a>
+            </h3>
+            <div class="subheading mb-3">Apoio ao Museu de Arte de São Paulo</div>
+          </div>
+        </div>
+
+
       </div>
     </section>
 
