--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">
-              <a href="https://m.facebook.com/100068907803733/" target="_blank">Projeto Resgato Salto</a>
+              <a href="https://www.facebook.com/profile.php?id=100086260937616" target="_blank">Projeto Resgato Salto / Salvando Filhos de Noé</a>
             </h3>
             <div class="subheading mb-3">Projeto de resgate de animais feridos e abandonados na cidade de Salto - SP</div>
           </div>
