--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.11.0/devicon.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
@@ -172,6 +172,9 @@
           <li class="list-inline-item">
             <i class="devicons devicon-heroku-plain-wordmark"></i>
           </li>
+          <li class="list-inline-item">
+            <i class="devicons devicon-azure-plain"></i>
+          </li>               
         </ul>
 
         <div class="subheading mb-3">Top Programming Languages &amp; Tools</div>
@@ -183,6 +186,12 @@
             <i class="devicons devicon-javascript-plain"></i>
           </li>
           <li class="list-inline-item">
+            <i class="devicons devicon-java-plain"></i>
+          </li>      
+          <li class="list-inline-item">
+            <i class="devicons devicon-kotlin-plain"></i>
+          </li>                
+          <li class="list-inline-item">
             <i class="devicons devicon-python-plain-wordmark"></i>
           </li>
           <li class="list-inline-item">
@@ -192,19 +201,44 @@
             <i class="devicons devicon-php-plain"></i>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicon-docker-plain-wordmark"></i>
+            <i class="devicons devicon-r-plain"></i>
+          </li>                                              
+        </ul>
+
+        <div class="subheading mb-3">Top Tooling and Platforms</div>
+        <ul class="list-inline list-icons">
+          <li class="list-inline-item">
+            <i class="devicon devicon-kubernetes-plain-wordmark"></i>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicon-git-plain-wordmark"></i>
+            <i class="devicon devicon-docker-plain-wordmark"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="devicon devicon-podman-plain-wordmark"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="devicon devicon-git-plain-wordmark"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="devicon devicon-terraform-plain-wordmark"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="devicon devicon-packer-plain-wordmark"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="devicon devicon-ansible-plain-wordmark"></i>
           </li>
           <li class="list-inline-item">
             <i class="devicons devicon-jenkins-plain"></i>
-          </li>    
+          </li>  
           <li class="list-inline-item">
-            <i class="devicons devicon-kubernetes-plain"></i>
-          </li>                  
+            <i class="devicons devicon-argocd-plain"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="devicons devicon-prometheus-plain"></i>
+          </li>
         </ul>
-
+        </div>
 
         <div class="subheading mb-3">Top Databases</div>
         <ul class="list-inline list-icons">
@@ -219,7 +253,7 @@
           </li>
           <li class="list-inline-item">
             <i class="devicons devicon-mongodb-plain-wordmark"></i>
-          </li>
+          </li>        
         </ul>
 
         <div class="subheading mb-3">Operating System</div>
@@ -236,6 +270,9 @@
           <li class="list-inline-item">
             <i class="devicons devicon-ubuntu-plain-wordmark"></i>
           </li>
+          <li class="list-inline-item">
+            <i class="devicons devicon-opensuse-plain-wordmark"></i>
+          </li>          
           <li class="list-inline-item">
             <i class="devicons devicon-apple-plain"></i>
           </li>
