--- a/index.html
+++ b/index.html
@@ -152,6 +152,14 @@
                     </span>
                   </a>
                 </li>
+                <li class="list-inline-item">
+                  <a href="https://medium.com/@fidelissauro" target="_blank">
+                    <span class="fa-stack fa-lg">
+                      <i class="fa fa-circle fa-stack-2x"></i>
+                      <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
+                    </span>
+                  </a>
+                </li>                
         </ul>
       </div>
       </div>
