--- a/index.html
+++ b/index.html
@@ -350,7 +350,23 @@
             <div class="resume-date text-md-right">
               <span class="text-primary">Ago 2019 - Apr 2021</span>
             </div>
-          </div>          
+          </div>
+
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Independent Consultant</h3>
+              <div class="subheading mb-3">Nanoshots - 34.503.069/1000-50</div>
+              <p>Helping Startups and Tech Companies in your journey to the Cloud</p>
+              <p>Technical Overview for Startup Solutions using best pratices of Software Development and Cloud Architectures</p>
+              <p>Helping to build and validate MVP's, and turn MVP's in real world scalable products</p>
+              <p>Management, implementation and Disaster Recovery Strategies with Monitoring and IaC Concept</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Ago 2017 - Nov 2020</span>
+            </div>
+          </div>
+          
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
