--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Software Specialist - SRE</h3>
+            <h3 class="mb-0">Software Engineering Specialist - Site Reliability Engineering</h3>
             <div class="subheading mb-3">Itaú Unibanco</div>
             <p>Solutions Architect for Microservices and Critical Systems</p>
             <p>Cloud Optimization for Core Products, Kubernetes foundation with EKS</p>
@@ -463,6 +463,17 @@
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Oct 2022 - Jul 2024</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">PUCRS - Pontifícia Universidade Católica do Rio Grande do Sul</h3>
+            <div class="subheading mb-3">Ext. Data Science and Analytics</div>
+            <div>Macroeconomics, Politics and Economic Analysis</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Jun 2023 - Jul 2023</span>
           </div>
         </div>
 
