--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@
         </div>
       </div>
 
+      
       <div class="resume-item d-flex flex-column flex-md-row mb-5">
         <div class="resume-content mr-auto">
           <h3 class="mb-0">USP/Esalq</h3>
@@ -468,6 +469,17 @@
         </div>
         <div class="resume-date text-md-right">
           <span class="text-primary">Oct 2022 - Jul 2024</span>
+        </div>
+      </div>
+
+      <div class="resume-item d-flex flex-column flex-md-row mb-5">
+        <div class="resume-content mr-auto">
+          <h3 class="mb-0">USP/FIA</h3>
+          <div class="subheading mb-3">Post-Graduate - Software Engineering / Software Architecture</div>
+          <div>Executive Focus on Software Architecture</div>
+        </div>
+        <div class="resume-date text-md-right">
+          <span class="text-primary">Jan 2024 - Jun 2025</span>
         </div>
       </div>
 
