--- a/index.html
+++ b/index.html
@@ -335,6 +335,17 @@
 
       <div class="resume-item d-flex flex-column flex-md-row mb-5">
         <div class="resume-content mr-auto">
+          <h3 class="mb-0">Instructor</h3>
+          <div class="subheading mb-3">LinuxTips</div>
+          <p>Workshops, Mentoring & Courses</p>
+        </div>
+        <div class="resume-date text-md-right">
+          <span class="text-primary">Apr 2021 - Present</span>
+        </div>
+      </div>      
+
+      <div class="resume-item d-flex flex-column flex-md-row mb-5">
+        <div class="resume-content mr-auto">
           <h3 class="mb-0">Site Reliability Engineering</h3>
           <div class="subheading mb-3">Pagseguro PagBank</div>
           <p>SLO, SLI and SLA management with Observability optimizations</p>
