--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
       <div class="resume-item d-flex flex-column flex-md-row mb-5">
         <div class="resume-content mr-auto">
-          <h3 class="mb-0">Software Engineering Specialist - Site Reliability Engineering</h3>
+          <h3 class="mb-0">Staff Software Engineering - Site Reliability Engineering</h3>
           <div class="subheading mb-3">Itaú Unibanco</div>
           <p>Solutions Architect for Microservices and Critical Systems</p>
           <p>Cloud Optimization for Core Products, Kubernetes foundation with EKS</p>
@@ -335,18 +335,18 @@
 
       <div class="resume-item d-flex flex-column flex-md-row mb-5">
         <div class="resume-content mr-auto">
-          <h3 class="mb-0">Instructor</h3>
+          <h3 class="mb-0">Instructor / Professor</h3>
           <div class="subheading mb-3">LinuxTips</div>
           <p>Workshops, Mentoring & Courses</p>
         </div>
         <div class="resume-date text-md-right">
-          <span class="text-primary">Apr 2021 - Present</span>
+          <span class="text-primary">Jun 2024 - Present</span>
         </div>
       </div>      
 
       <div class="resume-item d-flex flex-column flex-md-row mb-5">
         <div class="resume-content mr-auto">
-          <h3 class="mb-0">Site Reliability Engineering</h3>
+          <h3 class="mb-0">Site Reliability Engineering Sênior</h3>
           <div class="subheading mb-3">Pagseguro PagBank</div>
           <p>SLO, SLI and SLA management with Observability optimizations</p>
           <p>Internal Consultant for new projects and services for high performance and cost optimization</p>
@@ -377,7 +377,7 @@
 
       <div class="resume-item d-flex flex-column flex-md-row mb-5">
         <div class="resume-content mr-auto">
-          <h3 class="mb-0">Cloud Architect / SRE</h3>
+          <h3 class="mb-0">Cloud Architect Sênior</h3>
           <div class="subheading mb-3">Superlógica Tecnologias | PJBank</div>
           <p>High throughput and high availability architecture for payment services using AWS Solutions. Architecture
             for PCI Compliance Business. Microservices development using Go and NodeJS.</p>
@@ -393,7 +393,7 @@
 
       <div class="resume-item d-flex flex-column flex-md-row mb-5">
         <div class="resume-content mr-auto">
-          <h3 class="mb-0">DevOps Engineer</h3>
+          <h3 class="mb-0">DevOps Engineer Mid/Sr</h3>
           <div class="subheading mb-3">Superlógica Tecnologias | PJBank</div>
           <p>Service Design and Implementation using Amazon AWS solutions like EC2, VPC Best Pratices, RDS, S3,
             ElasticSearch,
@@ -417,7 +417,7 @@
 
       <div class="resume-item d-flex flex-column flex-md-row mb-5">
         <div class="resume-content mr-auto">
-          <h3 class="mb-0">Web Developer</h3>
+          <h3 class="mb-0">Web Developer Junior</h3>
           <div class="subheading mb-3">Tecnologia Fox</div>
           <p>ERP Development Solutions for Energy Industry using PHP, MySQL, MongoDB, HTML, CSS and Javascript on agile
             teams.
@@ -460,26 +460,16 @@
     <div class="my-auto">
       <h2 class="mb-5">Education</h2>
 
-      <div class="resume-item d-flex flex-column flex-md-row mb-5">
-        <div class="resume-content mr-auto">
-          <h3 class="mb-0">Fatec Dom Amaury Castanho - Itu</h3>
-          <div class="subheading mb-3">IT Management</div>
-          <div>Project Management, ITIL, Cobit, PMBok, Lean</div>
-        </div>
-        <div class="resume-date text-md-right">
-          <span class="text-primary">Jan 2014 - Jul 2018</span>
-        </div>
-      </div>
 
       
       <div class="resume-item d-flex flex-column flex-md-row mb-5">
         <div class="resume-content mr-auto">
-          <h3 class="mb-0">USP/Esalq</h3>
-          <div class="subheading mb-3">MBA Data Science and Analytics</div>
-          <div>Analytics, Big Data, IA, Machine Learning, Business</div>
+          <h3 class="mb-0">Universidad Europea Del Atlantico</h3>
+          <div class="subheading mb-3">Master’s Degree in Technology</div>
+          <div>In Progress...</div>
         </div>
         <div class="resume-date text-md-right">
-          <span class="text-primary">Oct 2022 - Jul 2024</span>
+          <span class="text-primary">Jul 2024 - Jan 2026</span>
         </div>
       </div>
 
@@ -496,6 +486,17 @@
 
       <div class="resume-item d-flex flex-column flex-md-row mb-5">
         <div class="resume-content mr-auto">
+          <h3 class="mb-0">USP - Universidade de São Paulo</h3>
+          <div class="subheading mb-3">Ext. Statistics and Machine Learning</div>
+          <div>R Language, Machine Learning, Artificial Intelligence and Statistics</div>
+        </div>
+        <div class="resume-date text-md-right">
+          <span class="text-primary">Jun 2023 - Jul 2023</span>
+        </div>
+      </div>
+
+      <div class="resume-item d-flex flex-column flex-md-row mb-5">
+        <div class="resume-content mr-auto">
           <h3 class="mb-0">PUCRS - Pontifícia Universidade Católica do Rio Grande do Sul</h3>
           <div class="subheading mb-3">Ext. Macroeconomics</div>
           <div>Macroeconomics, Politics and Economic Analysis</div>
@@ -504,6 +505,30 @@
           <span class="text-primary">Jun 2023 - Jul 2023</span>
         </div>
       </div>
+
+      <div class="resume-item d-flex flex-column flex-md-row mb-5">
+        <div class="resume-content mr-auto">
+          <h3 class="mb-0">USP/Esalq</h3>
+          <div class="subheading mb-3">MBA Data Science and Analytics</div>
+          <div>Analytics, Big Data, IA, Machine Learning, Business</div>
+        </div>
+        <div class="resume-date text-md-right">
+          <span class="text-primary">Oct 2022 - Jul 2024</span>
+        </div>
+      </div>     
+
+      <div class="resume-item d-flex flex-column flex-md-row mb-5">
+        <div class="resume-content mr-auto">
+          <h3 class="mb-0">Fatec Dom Amaury Castanho - Itu</h3>
+          <div class="subheading mb-3">IT Management</div>
+          <div>Project Management, ITIL, Cobit, PMBok, Lean</div>
+        </div>
+        <div class="resume-date text-md-right">
+          <span class="text-primary">Jan 2014 - Jul 2018</span>
+        </div>
+      </div>
+
+
 
     </div>
 
