--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
       <div class="resume-item d-flex flex-column flex-md-row mb-5">
         <div class="resume-content mr-auto">
-          <h3 class="mb-0">Staff Software Engineering - Site Reliability Engineering</h3>
+          <h3 class="mb-0">Staff Software Engineer - Site Reliability Engineering</h3>
           <div class="subheading mb-3">Itaú Unibanco</div>
           <p>Solutions Architect for Microservices and Critical Systems</p>
           <p>Cloud Optimization for Core Products, Kubernetes foundation with EKS</p>
