--- a/index.html
+++ b/index.html
@@ -321,6 +321,21 @@
 
       <div class="resume-item d-flex flex-column flex-md-row mb-5">
         <div class="resume-content mr-auto">
+          <h3 class="mb-0">Principal Software Engineer</h3>
+          <div class="subheading mb-3">Itaú Unibanco</div>
+          <p>Solutions Architect for Microservices and Critical Systems</p>
+          <p>Cloud Optimization for Core Products, Kubernetes foundation with EKS</p>
+          <p>Observability and Metrics digests and management</p>
+          <p>Core Systems Modernizations and Cloud Native Migrations</p>
+          <p>Mentoring</p>
+        </div>
+        <div class="resume-date text-md-right">
+          <span class="text-primary">Dec 2024 - Present</span>
+        </div>
+      </div>
+
+      <div class="resume-item d-flex flex-column flex-md-row mb-5">
+        <div class="resume-content mr-auto">
           <h3 class="mb-0">Staff Software Engineer - Site Reliability Engineering</h3>
           <div class="subheading mb-3">Itaú Unibanco</div>
           <p>Solutions Architect for Microservices and Critical Systems</p>
@@ -329,7 +344,7 @@
           <p>Core Systems Modernizations and Cloud Native Migrations</p>
         </div>
         <div class="resume-date text-md-right">
-          <span class="text-primary">Apr 2021 - Present</span>
+          <span class="text-primary">Apr 2021 - Dec 2024</span>
         </div>
       </div>
 
@@ -599,6 +614,15 @@
     <div class="my-auto">
       <h2 class="mb-5">Social Projects - Support</h2>
       <div class="subheading mb-3">Supported Brazilian Entities and Projects</div>
+
+      <div class="resume-item d-flex flex-column flex-md-row mb-5">
+        <div class="resume-content mr-auto">
+          <h3 class="mb-0">
+            <a href="https://www.catarse.me/adote_umx_educandx_maria_felipa_ae78" target="_blank">Adote um/uma educande - Escolinha Maria Felipa </a>
+          </h3>
+          <div class="subheading mb-3">Ação de responsabilidade social que a Escolinha de Educação Infantil Afro-Brasileira Maria Felipa </div>
+        </div>
+      </div>
 
       <div class="resume-item d-flex flex-column flex-md-row mb-5">
         <div class="resume-content mr-auto">
